--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,11 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+	<groupId>org.apache.velocity</groupId>
+	<artifactId>velocity</artifactId>
+	<version>1.7</version>
+	</dependency>	            
   </dependencies>
   <build>
     <finalName>VelocityWebsitePractice</finalName>
